[package]
name = "scraper"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.4.1"
regex = "1.3.1"
reqwest = "0.9.24"
lazy_static = "*"
html5ever = "*"